tests/baselines/reference/dynamicImportDeferModuleES2020.errors.txt
b.ts(1,1): error TS18060: Deferred imports are only supported when the '--module' flag is set to 'esnext' or 'nodenext'.


==== a.ts (0 errors) ====
    export function foo() {
      console.log("foo from a");
    }
    
==== b.ts (1 errors) ====
    import.defer("./a").then(ns => {
    ~~~~~~~~~~~~~~~~~~~
!!! error TS18060: Deferred imports are only supported when the '--module' flag is set to 'esnext' or 'nodenext'.
      ns.foo();
    });
    
    import("./a"); // TODO: Removing this makes the `import.defer` call complain about module not found
    